# insert-header-hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  readme.md  requirements.txt  setup.cfg
pre_commit_hooks/: insert_header_hook.py
