[metadata]
name = pre_commit_hooks
version = 1.0.0
description = This repository contains implementation of file header pre-commit hooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RamuniN/insert-header-hook
author = Navya Ramuni
author_email = navya.ramuni1992@gmail.com


[options]
packages = find:
install_requires =
    gitpython==3.1.8
python_requires = >=3.8


[options.entry_points]
console_scripts =
    insert-header-hook = pre_commit_hooks.insert_header_hook:main
